fix icons not showing on mobile and add title attributes to some UI elements

--- a/style.css
+++ b/style.css
@@ -52,19 +52,11 @@ details > summary::-webkit-details-marker {
 details > code {
 	font-family: "JetBrains Mono", monospace !important;
 	font-size: 0.9rem !important;
-	@apply relative min-h-7 py-1 px-3 pl-8 mt-2 w-full font-normal flex items-center justify-start rounded-md bg-blue-gray-900 text-blue-gray-100 overflow-hidden first-of-type:mt-3 before:(absolute top-0 left-0 h-full w-6 bg-blue-gray-100 p-1 flex items-center justify-center);
+	@apply relative min-h-7 py-1 px-3 pl-8 mt-2 w-full font-normal flex items-center justify-start rounded-md bg-blue-gray-900 text-blue-gray-200 overflow-hidden first-of-type:mt-3;
 }
 
-details > code:first-of-type::before {
-	content: url("./public/cli.svg");
-}
-
-details > code:nth-of-type(2)::before {
-	content: url("./public/js.svg");
-}
-
-details > code:nth-of-type(3)::before {
-	content: url("./public/css.svg");
+details > code img {
+	@apply absolute top-0 left-0 h-full w-6 bg-blue-gray-100 p-1 flex items-center justify-center;
 }
 
 option {
